// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should send mail when the source request is approved 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "dynamicTemplateData": Object {
      "first_name": "Ido",
      "rss_link": "https://demo.com/sitemap.xml",
      "source_name": "Demo",
      "timestamp": "Sep 27, 2020",
    },
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-d79367f86f1e4ca5afdf4c1d39ff7214",
    "to": "ido@daily.dev",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;

exports[`should send mail when the source request is declined 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "dynamicTemplateData": Object {
      "first_name": "Ido",
      "rss_link": "https://demo.com/sitemap.xml",
      "source_name": "Demo",
      "timestamp": "Sep 27, 2020",
    },
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-48de63612ff944cb8156fec17f47f066",
    "to": "ido@daily.dev",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;

exports[`should send mail when the source request is declined and existed 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "dynamicTemplateData": Object {
      "first_name": "Ido",
      "rss_link": "https://demo.com/sitemap.xml",
      "source_name": "Demo",
      "timestamp": "Sep 27, 2020",
    },
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-d79367f86f1e4ca5afdf4c1d39ff7214",
    "to": "ido@daily.dev",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;

exports[`should send mail when the source request is submitted 1`] = `
Array [
  Object {
    "asm": Object {
      "groupId": 12850,
    },
    "category": "Notification",
    "dynamicTemplateData": Object {
      "first_name": "Ido",
      "rss_link": "https://demo.com/sitemap.xml",
      "source_name": "Demo",
      "timestamp": "Sep 27, 2020",
    },
    "from": Object {
      "email": "informer@daily.dev",
      "name": "daily.dev",
    },
    "replyTo": Object {
      "email": "hi@daily.dev",
      "name": "daily.dev",
    },
    "templateId": "d-9254665878014627b4fd71593f09d975",
    "to": "ido@daily.dev",
    "trackingSettings": Object {
      "openTracking": Object {
        "enable": true,
      },
    },
  },
]
`;
